hard-gists/4016539/run.log
=== Docker Run Log for 4016539 ===
Started at: Mi 29. Okt 14:17:26 CET 2025

[2025-10-29 14:17:26] START: Running container for 4016539
[2025-10-29 14:17:26] SUCCESS: Container 2ff5f9339275a1d5f7b2ea0c2db745ffcc15c81421e9b4247e3344531f71c723 started for 4016539
=== Container logs for 4016539 ===
  File "/snippet.py", line 68
    print "saving %s (%s) frame %d, %s %s" % (path, mode, i, im.size, im.tile)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4016539 ===
[2025-10-29 14:17:28] INFO: Container 2ff5f9339275a1d5f7b2ea0c2db745ffcc15c81421e9b4247e3344531f71c723 has stopped
